--- a/WebSocketProxy/WebSocketProxy.csproj
+++ b/WebSocketProxy/WebSocketProxy.csproj
@@ -58,6 +58,9 @@
     <Compile Include="TcpStateContainer.cs" />
     <Compile Include="WebSocketHeaders.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="WebSocketProxy.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
