- Migrated WebSocketProxy project to Multi targeting: .NET Standard 2.0 and .NET 4.5

--- a/WebSocketProxy.Sample/WebSocketProxy.Sample.csproj
+++ b/WebSocketProxy.Sample/WebSocketProxy.Sample.csproj
@@ -73,6 +73,11 @@
       <Name>WebSocketProxy</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Content\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
